[gd_scene load_steps=5 format=3 uid="uid://ddlj3gyuqhkn5"]

[ext_resource type="Script" uid="uid://c5s8axkpyr1u0" path="res://scripts/user_interface/main_menu.gd" id="1_xsm3n"]
[ext_resource type="Theme" uid="uid://dq1tetwaiurgt" path="res://resources/themes/general_theme.tres" id="2_n0nnf"]
[ext_resource type="PackedScene" uid="uid://byrvfkvijm1xg" path="res://scenes/character_preview.tscn" id="3_n0nnf"]
[ext_resource type="Texture2D" uid="uid://dedv6nw43y5ih" path="res://icon.png" id="4_edk11"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsm3n")

[node name="CharacterCustomiser" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CharacterPreview" type="Sprite2D" parent="CharacterCustomiser"]
position = Vector2(-350, 0)
texture = ExtResource("4_edk11")

[node name="CharacterPreview2" type="Sprite2D" parent="CharacterCustomiser"]
position = Vector2(350, 0)
texture = ExtResource("4_edk11")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -360.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -78.0
offset_right = 78.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="PlayerNameInput" type="LineEdit" parent="MainMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_n0nnf")
placeholder_text = "Chef Name"
alignment = 1

[node name="HostButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Host Game"

[node name="HSeparator2" type="HSeparator" parent="MainMenu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SinglePlayerButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Play Offline"

[node name="JoinButton" type="Button" parent="MainMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Join lobby"

[node name="HSeparator3" type="HSeparator" parent="MainMenu/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Settings"

[node name="CreditsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Credits"

[node name="DiscordButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Discord"

[node name="HSeparator" type="HSeparator" parent="MainMenu/VBoxContainer"]
layout_mode = 2

[node name="QuitGameButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Quit game"

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -315.0
offset_top = 82.0
offset_right = 315.0
offset_bottom = 156.0
grow_horizontal = 2
theme = ExtResource("2_n0nnf")
theme_override_font_sizes/font_size = 64
text = "Chef Wobbles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lobby" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.5
offset_right = 143.5
offset_bottom = 54.0
grow_horizontal = 2

[node name="StatusLabel" type="Label" parent="Lobby/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Lobby Status"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/VBoxContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="Lobby/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Start Game"

[node name="LeaveLobbyButton" type="Button" parent="Lobby/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Leave Lobby"

[node name="PlayerList" type="VBoxContainer" parent="Lobby/VBoxContainer"]
layout_mode = 2

[node name="ConnectionDialog" type="AcceptDialog" parent="."]
theme = ExtResource("2_n0nnf")

[node name="ConnectionStatus" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.5
offset_top = -23.0
offset_right = 117.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_n0nnf")
text = "Connection Status..."
horizontal_alignment = 1

[node name="Preview" type="SubViewport" parent="."]

[node name="CharacterPreview" parent="Preview" instance=ExtResource("3_n0nnf")]

[node name="JoinDialog" type="AcceptDialog" parent="."]
title = "Join a game"
size = Vector2i(239, 115)
theme = ExtResource("2_n0nnf")
ok_button_text = "Cancel"

[node name="VBoxContainer" type="VBoxContainer" parent="JoinDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 231.0
offset_bottom = 70.0

[node name="IPInput" type="LineEdit" parent="JoinDialog/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
placeholder_text = "ip address"

[node name="HSeparator" type="HSeparator" parent="JoinDialog/VBoxContainer"]
layout_mode = 2

[node name="JoinConfirmationButton" type="Button" parent="JoinDialog/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_n0nnf")
text = "Join lobby"

[node name="QuitDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
mode = 3
title = "Quit the Game?"
size = Vector2i(239, 115)
theme = ExtResource("2_n0nnf")
ok_button_text = "Yes, please!"

[node name="QuitConfirmationButton" type="Button" parent="QuitDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 151.0
offset_bottom = 35.0
theme = ExtResource("2_n0nnf")
text = "No, thank you."

[connection signal="pressed" from="MainMenu/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="canceled" from="JoinDialog" to="." method="_on_join_dialog_canceled"]
[connection signal="confirmed" from="JoinDialog" to="." method="_on_join_dialog_confirmed"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_quit_dialog_confirmed"]
[connection signal="pressed" from="QuitDialog/QuitConfirmationButton" to="." method="_on_quit_confirmation_button_pressed"]
